# snow

./: .gitignore  ChangeLog  ISSUE.md  Makefile.am  README.md  configure.ac  snow.pc.in
include/: Makefile.am
include/snow/: Makefile.am  allocate.h  builtin.h  buindin.h  diagnostics.h  environment.h  eval.h  object.h  print.h  read.h  snow.h
include/snow/config/: _gcc.h  _linux.h  _msvc.h  _system.h  _windows.h  msvc.h
src/: Makefile.am  allocate.c  builtin.c  environment.c  eval.c  main.c  object.c  print.c  read.c  snow
